fixed z-index bug

--- a/css-index.css
+++ b/css-index.css
@@ -25,6 +25,7 @@ body{
 	height: auto;
   	width: 100%;
   	padding: 10px;
+	z-index: 1;
 
   	position: fixed;
   	top: 0;
